# electron-python-ex

./: .gitignore  .nvmrc  README.md  index.html  main.js  package-lock.json  package.json  pyproject.toml  renderer.js  requirements.txt
public/js/: app.js
server/: calc.py
